--- a/testapp.html
+++ b/testapp.html
@@ -3,23 +3,29 @@
 </head>
 
 <body>
-<!-- Just render the two templates -->
-{{> input}}
+{{loginButtons}}
+
+{{#if currentUser}}
+    {{> input}}
+{{/if}}
+
 {{> entries}}
 </body>
 
 <!-- Template for showing the input controls -->
 <template name="input">
-    <p>User: <input type="text" id="user"></p>
-
     <p>Message: <input type="text" id="message"><input type="button" id="sendMessage" value="Send"/></p>
 </template>
 
 <!-- Template for displaying all entries returned -->
 <template name="entries">
     {{#each entries}}
-    <strong>{{name}}:</strong> {{message}}<br>
+    <strong>{{user.username}}:</strong> {{message}}<br>
     {{/each}}
-    <p><input type="button" id="clear" value="Clear All"/></p>
+    {{#if currentUser}}
+        <p><input type="button" id="clear" value="Clear All"/></p>
+    {{/if}}
 </template>
+
+
 
